--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -97,8 +97,7 @@
     "error_tor_protocol_error": "Error talking to the Tor controller.\nIf you're using Whonix, check out https://www.whonix.org/wiki/onionshare to make OnionShare work.",
     "connecting_to_tor": "Connecting to the Tor network",
     "update_available": "There is an OnionShare update available. <a href='{}'>Click here</a> to download it.<br><br>Installed version: {}<br>Latest version: {}",
-    "update_error_tor": "Error checking for updates: Can't connect to Tor.\nCheck your Tor connection settings.",
-    "update_error_sockshttp": "Error checking for updates: Connected to Tor, but can't load the update HTTP request.",
+    "update_error_check_error": "Error checking for updates: Maybe you're not connected to Tor, or maybe the OnionShare website is down.",
     "update_error_invalid_latest_version": "Error checking for updates: The OnionShare website responded saying the latest version is '{}', but that doesn't appear to be a valid version string.",
     "update_not_available": "You are running the latest version of OnionShare.",
     "gui_tor_connection_error_settings": "Try adjusting how OnionShare connects to the Tor network in Settings."
