Make it possible to select multiple folders by using non-native QFileDialog

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -24,7 +24,7 @@
     "help_filename": "List of files or folders to share",
     "gui_drag_and_drop": "Drag and drop\nfiles here",
     "gui_add_files": "Add Files",
-    "gui_add_folder": "Add Folder",
+    "gui_add_folder": "Add Folders",
     "gui_delete": "Delete",
     "gui_choose_files": "Choose files",
     "gui_choose_folder": "Choose folder",
