--- a/share/locale/fr.json
+++ b/share/locale/fr.json
@@ -21,7 +21,7 @@
     "help_filename": "Liste des fichiers ou dossiers à partager",
     "gui_drag_and_drop": "Glissez déposez\nles fichiers ici",
     "gui_add_files": "Ajouter des fichiers",
-    "gui_add_folder": "Ajouter un dossier",
+    "gui_add_folder": "Ajouter des dossiers",
     "gui_delete": "Supprimer",
     "gui_choose_files": "Sélectionnez des fichiers",
     "gui_choose_folder": "Sélectionnez un dossier",
