Add desktop notification messages on download events (via systray)

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -16,6 +16,13 @@
     "large_filesize": "Warning: Sending large files could take hours",
     "error_tails_invalid_port": "Invalid value, port must be an integer",
     "error_tails_unknown_root": "Unknown error with Tails root process",
+    "systray_menu_exit": "Quit",
+    "systray_download_started_title": "Download started",
+    "systray_download_started_message": "A user has begun to download your share",
+    "systray_download_completed_title": "Download complete",
+    "systray_download_completed_message": "The user completed downloading your share",
+    "systray_download_canceled_title": "Download canceled",
+    "systray_download_canceled_message": "The user has canceled the download",
     "help_local_only": "Do not attempt to use tor: for development only",
     "help_stay_open": "Keep onion service running after download has finished",
     "help_transparent_torification": "My system is transparently torified",
@@ -64,6 +71,7 @@
     "gui_settings_autoupdate_check_button": "Check For Updates",
     "gui_settings_sharing_label": "Sharing options",
     "gui_settings_close_after_first_download_option": "Stop sharing after first download",
+    "gui_settings_systray_notifications": "Show notifications when a download commences or completes",
     "gui_settings_connection_type_label": "How should OnionShare connect to Tor?",
     "gui_settings_connection_type_bundled_option": "Use Tor that is bundled with OnionShare",
     "gui_settings_connection_type_automatic_option": "Attempt automatic configuration with Tor Browser",
