Update desktop notification text

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -17,12 +17,12 @@
     "error_tails_invalid_port": "Invalid value, port must be an integer",
     "error_tails_unknown_root": "Unknown error with Tails root process",
     "systray_menu_exit": "Quit",
-    "systray_download_started_title": "Download started",
-    "systray_download_started_message": "A user has begun to download your share",
-    "systray_download_completed_title": "Download complete",
-    "systray_download_completed_message": "The user completed downloading your share",
-    "systray_download_canceled_title": "Download canceled",
-    "systray_download_canceled_message": "The user has canceled the download",
+    "systray_download_started_title": "OnionShare Download Started",
+    "systray_download_started_message": "A user started downloading your files",
+    "systray_download_completed_title": "OnionShare Download Finished",
+    "systray_download_completed_message": "The user finished downloading your files",
+    "systray_download_canceled_title": "OnionShare Download Canceled",
+    "systray_download_canceled_message": "The user canceled the download",
     "help_local_only": "Do not attempt to use tor: for development only",
     "help_stay_open": "Keep onion service running after download has finished",
     "help_transparent_torification": "My system is transparently torified",
