Make adding of files/folders a single button

--- a/share/locale/cs.json
+++ b/share/locale/cs.json
@@ -22,11 +22,9 @@
     "help_debug": "Zaznamenat chyby na disk",
     "help_filename": "Seznam souborů a složek ke sdílení",
     "gui_drag_and_drop": "Táhni a pusť\nsoubory sem",
-    "gui_add_files": "Přidat soubory",
-    "gui_add_folder": "Přidat složku",
+    "gui_add": "Přidat",
     "gui_delete": "Smazat",
-    "gui_choose_files": "Vybrat soubory",
-    "gui_choose_folder": "vybrat složku",
+    "gui_choose_items": "Vybrat",
     "gui_start_server": "Spustit sdílení",
     "gui_stop_server": "Zastavit sdílení",
     "gui_copy_url": "Kopírovat URL",
