--- a/share/locale/de.json
+++ b/share/locale/de.json
@@ -22,11 +22,9 @@
     "help_debug": "Fehler auf Festplatte schreiben",
     "help_filename": "Liste der zu teilenden Dateien oder Verzeichnisse",
     "gui_drag_and_drop": "Drag & drop\nDateien hier",
-    "gui_add_files": "Dateien hinzufügen",
-    "gui_add_folder": "Verzeichnis hinzufügen",
+    "gui_add": "Hinzufügen",
     "gui_delete": "Löschen",
-    "gui_choose_files": "Dateien auswählen",
-    "gui_choose_folder": "Verzeichnis auswählen",
+    "gui_choose_items": "Auswählen",
     "gui_start_server": "Server starten",
     "gui_stop_server": "Server anhalten",
     "gui_copy_url": "URL kopieren",
