--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -30,11 +30,9 @@
     "help_debug": "Log application errors to stdout, and log web errors to disk",
     "help_filename": "List of files or folders to share",
     "gui_drag_and_drop": "Drag and drop\nfiles here",
-    "gui_add_files": "Add Files",
-    "gui_add_folder": "Add Folders",
+    "gui_add": "Add",
     "gui_delete": "Delete",
-    "gui_choose_files": "Choose files",
-    "gui_choose_folder": "Choose folders",
+    "gui_choose_items": "Choose",
     "gui_start_server": "Start Sharing",
     "gui_stop_server": "Stop Sharing",
     "gui_copy_url": "Copy URL",
