--- a/share/locale/eo.json
+++ b/share/locale/eo.json
@@ -22,11 +22,9 @@
     "help_debug": "Protokoli erarojn sur disko",
     "help_filename": "Listo de dosieroj aŭ dosierujoj por kundividi",
     "gui_drag_and_drop": "Ŝovu kaj metu\nla dosierojn ĉi tien",
-    "gui_add_files": "Aldoni dosierojn",
-    "gui_add_folder": "Aldoni dosierujon",
+    "gui_add": "Aldoni",
     "gui_delete": "Forviŝi",
-    "gui_choose_files": "Elekti dosierojn",
-    "gui_choose_folder": "Elekti dosierujon",
+    "gui_choose_items": "Elekti",
     "gui_start_server": "Komenci kundividon",
     "gui_stop_server": "Ĉesigi kundividon",
     "gui_copy_url": "Kopii URL",
