--- a/share/locale/es.json
+++ b/share/locale/es.json
@@ -21,11 +21,9 @@
     "help_debug": "Guardar registro de errores en el disco",
     "help_filename": "Lista de archivos o carpetas para compartir",
     "gui_drag_and_drop": "Arrastre\narchivos aquí",
-    "gui_add_files": "Añadir Archivos",
-    "gui_add_folder": "Añadir Carpeta",
+    "gui_add": "Añadir",
     "gui_delete": "Eliminar",
-    "gui_choose_files": "Elegir archivos",
-    "gui_choose_folder": "Elegir carpeta",
+    "gui_choose_items": "Elegir",
     "gui_start_server": "Encender el Servidor",
     "gui_stop_server": "Detener el Servidor",
     "gui_copy_url": "Copiar URL",
