--- a/share/locale/fi.json
+++ b/share/locale/fi.json
@@ -23,11 +23,9 @@
     "help_debug": "Tallentaa virheet levylle",
     "help_filename": "Luettele jaettavat tiedostot tai kansiot",
     "gui_drag_and_drop": "Vedä ja pudota\ntiedostot tänne",
-    "gui_add_files": "Lisää tiedostoja",
-    "gui_add_folder": "Lisää kansio",
+    "gui_add": "Lisää",
     "gui_delete": "Poista",
-    "gui_choose_files": "Valitse tiedostoja",
-    "gui_choose_folder": "Valitse kansio",
+    "gui_choose_items": "Valitse",
     "gui_start_server": "Käynnistä palvelin",
     "gui_stop_server": "Pysäytä palvelin",
     "gui_copy_url": "Kopioi URL-osoite",
