--- a/share/locale/fr.json
+++ b/share/locale/fr.json
@@ -20,11 +20,9 @@
     "help_debug": "Enregistrer les erreurs sur le disque",
     "help_filename": "Liste des fichiers ou dossiers à partager",
     "gui_drag_and_drop": "Glissez déposez\nles fichiers ici",
-    "gui_add_files": "Ajouter des fichiers",
-    "gui_add_folder": "Ajouter des dossiers",
+    "gui_add": "Ajouter",
     "gui_delete": "Supprimer",
-    "gui_choose_files": "Sélectionnez des fichiers",
-    "gui_choose_folder": "Sélectionnez des dossiers",
+    "gui_choose_items": "Sélectionnez",
     "gui_start_server": "Démarrer le serveur",
     "gui_stop_server": "Arrêter le serveur",
     "gui_copy_url": "Copier URL",
