--- a/share/locale/nl.json
+++ b/share/locale/nl.json
@@ -22,11 +22,9 @@
     "help_debug": "Log fouten naar harde schijf",
     "help_filename": "Lijst van bestanden of mappen om te delen",
     "gui_drag_and_drop": "Sleep en zet\nbestanden hier neer",
-    "gui_add_files": "Bestanden toevoegen",
-    "gui_add_folder": "Map toevoegen",
+    "gui_add": "Toevoegen",
     "gui_delete": "Verwijder",
-    "gui_choose_files": "Kies bestanden",
-    "gui_choose_folder": "Kies map",
+    "gui_choose_items": "Kies",
     "gui_start_server": "Start server",
     "gui_stop_server": "Stop server",
     "gui_copy_url": "Kopieer URL",
