--- a/share/locale/tr.json
+++ b/share/locale/tr.json
@@ -23,11 +23,9 @@
     "help_debug": "Hata kayıtlarını diske kaydet",
     "help_filename": "Paylaşmak için dosya ve klasörler listesi",
     "gui_drag_and_drop": "Dosyaları buraya\n Sürükle ve Bırak",
-    "gui_add_files": "Dosyalar Ekle",
-    "gui_add_folder": "Klasör Ekle",
+    "gui_add": "Ekle",
     "gui_delete": "Sil",
-    "gui_choose_files": "Dosyalar Seç",
-    "gui_choose_folder": "Klasör Seç",
+    "gui_choose_items": "Seç",
     "gui_start_server": "Paylaşımı Başlat",
     "gui_stop_server": "Paylaşımı Durdur",
     "gui_copy_url": "URL Kopyala",
