--- a/share/locale/it.json
+++ b/share/locale/it.json
@@ -23,11 +23,9 @@
     "help_debug": "Registra gli errori sul disco",
     "help_filename": "Lista dei file o cartelle da condividere",
     "gui_drag_and_drop": "Prendi e rilascia\ni file qui sopra",
-    "gui_add_files": "Aggiungi il Files",
-    "gui_add_folder": "Aggiungi la Cartella",
+    "gui_add": "Aggiungi",
     "gui_delete": "Cancella",
-    "gui_choose_files": "Scegli il file",
-    "gui_choose_folder": "Scegli la cartella",
+    "gui_choose_items": "Scegli",
     "gui_start_server": "Inizia la condivisione",
     "gui_stop_server": "Ferma la condivisione",
     "gui_copy_url": "Copia lo URL",
