Implements a shutdown timer to stop a share automatically (downloaded or not) after N hours

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -12,6 +12,7 @@
     "not_a_readable_file": "{0:s} is not a readable file.",
     "download_page_loaded": "Download page loaded",
     "other_page_loaded": "URL loaded",
+    "close_on_timeout": "Closing automatically because timeout was reached",
     "closing_automatically": "Closing automatically because download finished",
     "large_filesize": "Warning: Sending large files could take hours",
     "error_tails_invalid_port": "Invalid value, port must be an integer",
@@ -25,6 +26,7 @@
     "systray_download_canceled_message": "The user canceled the download",
     "help_local_only": "Do not attempt to use tor: for development only",
     "help_stay_open": "Keep onion service running after download has finished",
+    "help_shutdown_timeout": "Shut down the onion service after N hours",
     "help_transparent_torification": "My system is transparently torified",
     "help_stealth": "Create stealth onion service (advanced)",
     "help_debug": "Log application errors to stdout, and log web errors to disk",
@@ -89,6 +91,8 @@
     "gui_settings_button_save": "Save",
     "gui_settings_button_cancel": "Cancel",
     "gui_settings_button_help": "Help",
+    "gui_settings_shutdown_timeout_choice": "Set auto-stop timer?",
+    "gui_settings_shutdown_timeout": "Auto-stop share in (hours):",
     "settings_saved": "Settings saved to {}",
     "settings_error_unknown": "Can't connect to Tor controller because the settings don't make sense.",
     "settings_error_automatic": "Can't connect to Tor controller. Is Tor Browser running in the background? If you don't have it you can get it from:\nhttps://www.torproject.org/.",
