--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -92,7 +92,7 @@
     "gui_settings_button_cancel": "Cancel",
     "gui_settings_button_help": "Help",
     "gui_settings_shutdown_timeout_choice": "Set auto-stop timer?",
-    "gui_settings_shutdown_timeout": "Auto-stop share in (hours):",
+    "gui_settings_shutdown_timeout": "Auto-stop share at:",
     "settings_saved": "Settings saved to {}",
     "settings_error_unknown": "Can't connect to Tor controller because the settings don't make sense.",
     "settings_error_automatic": "Can't connect to Tor controller. Is Tor Browser running in the background? If you don't have it you can get it from:\nhttps://www.torproject.org/.",
