--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -115,5 +115,7 @@
     "gui_tor_connection_ask": "Would you like to open OnionShare settings to troubleshoot connecting to Tor?",
     "gui_tor_connection_ask_open_settings": "Open Settings",
     "gui_tor_connection_ask_quit": "Quit",
-    "gui_tor_connection_error_settings": "Try adjusting how OnionShare connects to the Tor network in Settings."
+    "gui_tor_connection_error_settings": "Try adjusting how OnionShare connects to the Tor network in Settings.",
+    "gui_server_started_after_timeout": "The server started after your chosen auto-timeout.\nPlease start a new share.",
+    "gui_server_timeout_expired": "The chosen timeout has already expired.\nPlease update the timeout and then you may start sharing."
 }
