--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -111,5 +111,6 @@
     "gui_tor_connection_ask": "Would you like to open OnionShare settings to troubleshoot connecting to Tor?",
     "gui_tor_connection_ask_open_settings": "Open Settings",
     "gui_tor_connection_ask_quit": "Quit",
-    "gui_tor_connection_error_settings": "Try adjusting how OnionShare connects to the Tor network in Settings."
+    "gui_tor_connection_error_settings": "Try adjusting how OnionShare connects to the Tor network in Settings.",
+    "share_via_onionshare": "Share via OnionShare"
 }
