#447 show alert and exit if the Settings dialog is canceled yet Tor is still not connected

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -112,5 +112,6 @@
     "gui_tor_connection_ask_open_settings": "Open Settings",
     "gui_tor_connection_ask_quit": "Quit",
     "gui_tor_connection_error_settings": "Try adjusting how OnionShare connects to the Tor network in Settings.",
+    "gui_tor_connection_canceled": "OnionShare is disconnected from Tor.\n\nPlease re-open OnionShare and configure the Tor connection.",
     "share_via_onionshare": "Share via OnionShare"
 }
