--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -46,6 +46,7 @@
     "gui_canceled": "Canceled",
     "gui_copied_url": "Copied URL to clipboard",
     "gui_copied_hidservauth": "Copied HidServAuth line to clipboard",
+    "gui_private_key_saved": "Private key saved to settings",
     "gui_starting_server1": "Starting Tor onion service...",
     "gui_starting_server2": "Crunching files...",
     "gui_please_wait": "Please wait...",
