Add bridge support (obfs4 or user-supplied)

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -90,6 +90,10 @@
     "gui_settings_authenticate_cookie_option": "Cookie",
     "gui_settings_password_label": "Password",
     "gui_settings_cookie_label": "Cookie path",
+    "gui_settings_tor_bridges": "Tor Bridge support",
+    "gui_settings_tor_bridges_no_bridges_radio_option": "Don't use bridges",
+    "gui_settings_tor_bridges_obfs4_radio_option": "Use obfs4 pluggable transports",
+    "gui_settings_tor_bridges_custom_radio_option": "Use custom bridges",
     "gui_settings_button_save": "Save",
     "gui_settings_button_cancel": "Cancel",
     "gui_settings_button_help": "Help",
