--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -75,6 +75,8 @@
     "gui_settings_sharing_label": "Sharing options",
     "gui_settings_close_after_first_download_option": "Stop sharing after first download",
     "gui_settings_systray_notifications": "Show desktop notifications",
+    "gui_settings_different_temporary_folder": "Use different temporary folder",
+    "gui_settings_different_temporary_folder_button": "Change directory",
     "gui_settings_connection_type_label": "How should OnionShare connect to Tor?",
     "gui_settings_connection_type_bundled_option": "Use Tor that is bundled with OnionShare",
     "gui_settings_connection_type_automatic_option": "Attempt automatic configuration with Tor Browser",
