Check the file is a valid file or dir (not just that it exists)

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -8,7 +8,7 @@
     "give_this_url": "Give this URL to the person you're sending the file to:",
     "give_this_url_stealth": "Give this URL and HidServAuth line to the person you're sending the file to:",
     "ctrlc_to_stop":  "Press Ctrl-C to stop server",
-    "not_a_file": "{0:s} is not a file.",
+    "not_a_file": "{0:s} is not a valid file.",
     "not_a_readable_file": "{0:s} is not a readable file.",
     "no_available_port": "Could not start the Onion service as there was no available port.",
     "download_page_loaded": "Download page loaded",
