Add a 'cleanup on exit' option to remove cache/state data

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -74,8 +74,10 @@
     "gui_settings_autoupdate_timestamp_never": "Never",
     "gui_settings_autoupdate_check_button": "Check For Updates",
     "gui_settings_sharing_label": "Sharing options",
+    "gui_settings_application_options_label": "Application options",
     "gui_settings_close_after_first_download_option": "Stop sharing after first download",
     "gui_settings_systray_notifications": "Show desktop notifications",
+    "gui_settings_clear_cache_on_exit": "Clear cache data on exit?",
     "gui_settings_connection_type_label": "How should OnionShare connect to Tor?",
     "gui_settings_connection_type_bundled_option": "Use Tor that is bundled with OnionShare",
     "gui_settings_connection_type_automatic_option": "Attempt automatic configuration with Tor Browser",
