--- a/share/locale/fr.json
+++ b/share/locale/fr.json
@@ -14,6 +14,12 @@
     "closing_automatically": "Fermeture automatique car le téléchargement est fini",
     "error_tails_invalid_port": "Valeur invalide, le port doit être un nombre entier",
     "error_tails_unknown_root": "Erreur inconnue avec un processus root sur Tails",
+    "systray_menu_exit": "Quitter",
+    "systray_download_started_title": "Téléchargement OnionShare Démarré",
+    "systray_download_started_message": "Un utilisateur télécharge vos fichiers",
+    "systray_download_completed_title": "Téléchargement OnionShare Complete",
+    "systray_download_canceled_title": "Téléchargement OnionShare Annulé",
+    "systray_download_canceled_message": "L'utilisateur a annulé le téléchargement",
     "help_tails_port": "Seulement sur Tails: port pour ouvrir le firewall, démarrage du onion service",
     "help_local_only": "Ne tentez pas d'utiliser Tor, uniquement pour développement",
     "help_stay_open": "Laisser tourner le onion service après que le téléchargment soit fini",
@@ -26,6 +32,12 @@
     "gui_start_server": "Démarrer le serveur",
     "gui_stop_server": "Arrêter le serveur",
     "gui_copy_url": "Copier URL",
+    "gui_copy_hidservauth": "Copier HidServAuth",
     "gui_downloads": "Téléchargements :",
-    "gui_copied_url": "URL copié dans le presse-papier"
+    "gui_canceled": "Annulé",
+    "gui_copied_url": "URL copié dans le presse-papier",
+    "gui_please_wait": "Attendez-vous...",
+    "gui_quit_warning_quit": "Quitter",
+    "gui_quit_warning_dont_quit": "Ne quitter pas",
+    "gui_settings_autoupdate_timestamp_never": "Jamais"
 }
