Simplify the wording of the start/stop timer labels to keep UI minimal

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -106,9 +106,9 @@
     "gui_settings_button_help": "Help",
     "gui_settings_timers_choice": "Schedule this share?",
     "gui_settings_shutdown_timeout_choice": "Set auto-stop timer?",
-    "gui_settings_shutdown_timeout": "Stop the share at:",
+    "gui_settings_shutdown_timeout": "Stop at:",
     "gui_settings_startup_timer_choice": "Set auto-start timer?",
-    "gui_settings_startup_timer": "Start the share at:",
+    "gui_settings_startup_timer": "Start at:",
     "settings_saved": "Settings saved to {}",
     "settings_error_unknown": "Can't connect to Tor controller because the settings don't make sense.",
     "settings_error_automatic": "Can't connect to Tor controller. Is Tor Browser running in the background? If you don't have it you can get it from:\nhttps://www.torproject.org/.",
