Fixes for showing user when their persistent URL is v2 but their Tor supports v3. Fixes for Stealth mode in v2

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -132,5 +132,6 @@
     "gui_server_timeout_expired": "The chosen timeout has already expired.\nPlease update the timeout and then you may start sharing.",
     "share_via_onionshare": "Share via OnionShare",
     "gui_save_private_key_checkbox": "Use a persistent URL\n(unchecking will delete any saved URL)",
+    "gui_private_key_is_v2": "Your Tor version supports v3 onion service, but your persistent URL is v2.\nUncheck this setting to remove your v2 URL and start using v3.",
     "persistent_url_in_use": "This share is using a persistent URL"
 }
