--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -34,7 +34,7 @@
     "help_debug": "Log application errors to stdout, and log web errors to disk",
     "help_filename": "List of files or folders to share",
     "help_config": "Path to a custom JSON config file (optional)",
-    "gui_drag_and_drop": "Drag and drop\nfiles here",
+    "gui_drag_and_drop": "Drag and drop files and folders\nto start sharing",
     "gui_add": "Add",
     "gui_delete": "Delete",
     "gui_choose_items": "Choose",
