Make the server button and URL display much nicer, and replace string "URL" with "address" for usability

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -5,14 +5,14 @@
     "wait_for_hs_trying": "Trying...",
     "wait_for_hs_nope": "Not ready yet.",
     "wait_for_hs_yup": "Ready!",
-    "give_this_url": "Give this URL to the person you're sending the file to:",
-    "give_this_url_stealth": "Give this URL and HidServAuth line to the person you're sending the file to:",
+    "give_this_url": "Give this address to the person you're sending the file to:",
+    "give_this_url_stealth": "Give this address and HidServAuth line to the person you're sending the file to:",
     "ctrlc_to_stop":  "Press Ctrl-C to stop server",
     "not_a_file": "{0:s} is not a valid file.",
     "not_a_readable_file": "{0:s} is not a readable file.",
     "no_available_port": "Could not start the Onion service as there was no available port.",
     "download_page_loaded": "Download page loaded",
-    "other_page_loaded": "URL loaded",
+    "other_page_loaded": "Address loaded",
     "close_on_timeout": "Closing automatically because timeout was reached",
     "closing_automatically": "Closing automatically because download finished",
     "timeout_download_still_running": "Waiting for download to complete before auto-stopping",
@@ -40,11 +40,11 @@
     "gui_choose_items": "Choose",
     "gui_start_server": "Start Sharing",
     "gui_stop_server": "Stop Sharing",
-    "gui_copy_url": "Copy URL",
+    "gui_copy_url": "Copy Address",
     "gui_copy_hidservauth": "Copy HidServAuth",
     "gui_downloads": "Downloads:",
     "gui_canceled": "Canceled",
-    "gui_copied_url": "Copied URL to clipboard",
+    "gui_copied_url": "Copied address to clipboard",
     "gui_copied_hidservauth": "Copied HidServAuth line to clipboard",
     "gui_starting_server1": "Starting Tor onion service...",
     "gui_starting_server2": "Crunching files...",
@@ -56,10 +56,10 @@
     "gui_download_progress_starting": "{0:s}, %p% (Computing ETA)",
     "gui_download_progress_eta": "{0:s}, ETA: {1:s}, %p%",
     "version_string": "Onionshare {0:s} | https://onionshare.org/",
-    "gui_quit_warning": "Are you sure you want to quit?\nThe URL you are sharing won't exist anymore.",
+    "gui_quit_warning": "Are you sure you want to quit?\nThe address you are sharing won't exist anymore.",
     "gui_quit_warning_quit": "Quit",
     "gui_quit_warning_dont_quit": "Don't Quit",
-    "error_rate_limit": "An attacker might be trying to guess your URL. To prevent this, OnionShare has automatically stopped the server. To share the files you must start it again and share the new URL.",
+    "error_rate_limit": "An attacker might be trying to guess your address. To prevent this, OnionShare has automatically stopped the server. To share the files you must start it again and share the new address.",
     "zip_progress_bar_format": "Crunching files: %p%",
     "error_stealth_not_supported": "To create stealth onion services, you need at least Tor 0.2.9.1-alpha (or Tor Browser 6.5) and at least python3-stem 1.5.0.",
     "error_ephemeral_not_supported": "OnionShare requires at least at least Tor 0.2.7.1 and at least python3-stem 1.4.0.",
@@ -131,6 +131,9 @@
     "gui_server_started_after_timeout": "The server started after your chosen auto-timeout.\nPlease start a new share.",
     "gui_server_timeout_expired": "The chosen timeout has already expired.\nPlease update the timeout and then you may start sharing.",
     "share_via_onionshare": "Share via OnionShare",
-    "gui_save_private_key_checkbox": "Use a persistent URL\n(unchecking will delete any saved URL)",
-    "persistent_url_in_use": "This share is using a persistent URL"
+    "gui_save_private_key_checkbox": "Use a persistent address\n(unchecking will delete any saved address)",
+    "persistent_url_in_use": "This share is using a persistent address",
+    "gui_url_description": "<b>Anyone</b> with this link can <b>download</b> your files using <b>Tor Browser</b>:",
+    "gui_url_label": "Your Download Address",
+    "gui_url_label_one_time": "Your One-Time Download Address"
 }
