--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -56,9 +56,10 @@
     "gui_download_progress_starting": "{0:s}, %p% (Computing ETA)",
     "gui_download_progress_eta": "{0:s}, ETA: {1:s}, %p%",
     "version_string": "Onionshare {0:s} | https://onionshare.org/",
-    "gui_quit_warning": "Are you sure you want to quit?\nThe address you are sharing won't exist anymore.",
+    "gui_quit_title": "Transfer in Progress",
+    "gui_quit_warning": "You're in the process of sending files. Are you sure you want to quit OnionShare?",
     "gui_quit_warning_quit": "Quit",
-    "gui_quit_warning_dont_quit": "Don't Quit",
+    "gui_quit_warning_dont_quit": "Cancel",
     "error_rate_limit": "An attacker might be trying to guess your address. To prevent this, OnionShare has automatically stopped the server. To share the files you must start it again and share the new address.",
     "zip_progress_bar_format": "Crunching files: %p%",
     "error_stealth_not_supported": "To create stealth onion services, you need at least Tor 0.2.9.1-alpha (or Tor Browser 6.5) and at least python3-stem 1.5.0.",
