Reduce the size of the closing messages so they only wrap 2 lines

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -13,9 +13,9 @@
     "no_available_port": "Could not start the Onion service as there was no available port.",
     "download_page_loaded": "Download page loaded",
     "other_page_loaded": "Address loaded",
-    "close_on_timeout": "Closing automatically because timeout was reached",
-    "closing_automatically": "Closing automatically because download finished",
-    "timeout_download_still_running": "Waiting for download to complete before stopping",
+    "close_on_timeout": "Stopped because timeout was reached",
+    "closing_automatically": "Stopped because download finished",
+    "timeout_download_still_running": "Waiting for download to complete",
     "large_filesize": "Warning: Sending large files could take hours",
     "error_tails_invalid_port": "Invalid value, port must be an integer",
     "error_tails_unknown_root": "Unknown error with Tails root process",
