actually show those messages in the system tray, not still in the statusbar, and with the mandatory titles

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -44,8 +44,10 @@
     "gui_copy_hidservauth": "Copy HidServAuth",
     "gui_downloads": "Downloads:",
     "gui_canceled": "Canceled",
-    "gui_copied_url": "Copied address to clipboard",
-    "gui_copied_hidservauth": "Copied HidServAuth line to clipboard",
+    "gui_copied_url_title": "Copied Onion address",
+    "gui_copied_url": "The Onion address has been copied to clipboard",
+    "gui_copied_hidservauth_title": "Copied HidServAuth",
+    "gui_copied_hidservauth": "The HidServAuth line has been copied to clipboard",
     "gui_starting_server1": "Starting Tor onion service...",
     "gui_starting_server2": "Crunching files...",
     "gui_please_wait": "Please wait...",
