--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -44,8 +44,8 @@
     "gui_copy_hidservauth": "Copy HidServAuth",
     "gui_downloads": "Downloads:",
     "gui_canceled": "Canceled",
-    "gui_copied_url_title": "Copied Onion address",
-    "gui_copied_url": "The Onion address has been copied to clipboard",
+    "gui_copied_url_title": "Copied OnionShare address",
+    "gui_copied_url": "The OnionShare address has been copied to clipboard",
     "gui_copied_hidservauth_title": "Copied HidServAuth",
     "gui_copied_hidservauth": "The HidServAuth line has been copied to clipboard",
     "gui_starting_server1": "Starting Tor onion service...",
@@ -137,10 +137,10 @@
     "gui_save_private_key_checkbox": "Use a persistent address\n(unchecking will delete any saved address)",
     "gui_url_description": "<b>Anyone</b> with this link can <b>download</b> your files using <b>Tor Browser</b>:",
     "gui_url_label": "Your Download Address <img src={} />",
-    "gui_url_label_persistent": "Every share will have the same URL.<br><br>If you want to go back to using one-time URLs, turn off persistence in the Settings.",
-    "gui_url_label_stay_open": "This URL will exist until you stop the share",
-    "gui_url_label_onetime": "This URL will only exist until the share is stopped or when the first download occurs.",
-    "gui_url_label_onetime_and_persistent": "This share will stop when first download occurs, but every future share will have the same URL.<br><br>If you want to go back to using one-time URLs, turn off persistence in the Settings.",
+    "gui_url_label_persistent": "This share will not stop automatically<br><br>Every share will have the same address (to use one-time addresses, disable persistence in the Settings)",
+    "gui_url_label_stay_open": "This share will not stop automatically",
+    "gui_url_label_onetime": "This share will stop after the first download",
+    "gui_url_label_onetime_and_persistent": "This share will stop after the first download<br><br>Every share will have the same address (to use one-time addresses, disable persistence in the Settings)",
     "gui_status_indicator_stopped": "Ready to Share",
     "gui_status_indicator_working": "Starting...",
     "gui_status_indicator_started": "Sharing",
