--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -40,6 +40,8 @@
     "gui_choose_items": "Choose",
     "gui_start_server": "Start Sharing",
     "gui_stop_server": "Stop Sharing",
+    "gui_stop_server_shutdown_timeout": "Stop Sharing ({}s remaining)",
+    "gui_stop_server_shutdown_timeout_tooltip": "Share will stop automatically at {}",
     "gui_copy_url": "Copy Address",
     "gui_copy_hidservauth": "Copy HidServAuth",
     "gui_downloads": "Downloads:",
@@ -135,10 +137,9 @@
     "gui_server_timeout_expired": "The chosen timeout has already expired.\nPlease update the timeout and then you may start sharing.",
     "share_via_onionshare": "Share via OnionShare",
     "gui_save_private_key_checkbox": "Use a persistent address\n(unchecking will delete any saved address)",
-    "gui_url_description": "<b>Anyone</b> with this link can <b>download</b> your files using <b>Tor Browser</b>:",
-    "gui_url_label": "Your Download Address <img src={} />",
-    "gui_url_label_persistent": "This share will not stop automatically<br><br>Every share will have the same address (to use one-time addresses, disable persistence in the Settings)",
-    "gui_url_label_stay_open": "This share will not stop automatically",
+    "gui_url_description": "<b>Anyone</b> with this link can <b>download</b> your files using <b>Tor Browser</b>: <img src={} />",
+    "gui_url_label_persistent": "This share will not stop automatically unless a timer is set.<br><br>Every share will have the same address (to use one-time addresses, disable persistence in the Settings)",
+    "gui_url_label_stay_open": "This share will not stop automatically unless a timer is set.",
     "gui_url_label_onetime": "This share will stop after the first download",
     "gui_url_label_onetime_and_persistent": "This share will stop after the first download<br><br>Every share will have the same address (to use one-time addresses, disable persistence in the Settings)",
     "gui_status_indicator_stopped": "Ready to Share",
