Move downloads into their own window that can be toggled on/off

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -44,7 +44,9 @@
     "gui_stop_server_shutdown_timeout_tooltip": "Share will stop automatically at {}",
     "gui_copy_url": "Copy Address",
     "gui_copy_hidservauth": "Copy HidServAuth",
-    "gui_downloads": "Downloads:",
+    "gui_downloads": "Download History",
+    "gui_downloads_window_tooltip": "Show/hide downloads",
+    "gui_no_downloads": "No downloads yet.",
     "gui_canceled": "Canceled",
     "gui_copied_url_title": "Copied OnionShare address",
     "gui_copied_url": "The OnionShare address has been copied to clipboard",
