--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -70,6 +70,7 @@
     "error_ephemeral_not_supported": "OnionShare requires at least Tor 0.2.7.1 and at least python3-stem 1.4.0.",
     "gui_settings_window_title": "Settings",
     "gui_settings_minimize_to_tray_on_close_option": "Minimize to system tray when window closed?",
+    "gui_settings_hide_to_tray": "Hide main window",
     "gui_settings_stealth_label": "Stealth (advanced)",
     "gui_settings_stealth_option": "Create stealth onion services",
     "gui_settings_stealth_option_details": "This makes OnionShare more secure, but also more difficult for the recipient to connect to it.<br><a href=\"https://github.com/micahflee/onionshare/wiki/Stealth-Onion-Services\">More information</a>.",
