--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -51,7 +51,7 @@
     "gui_copied_hidservauth_title": "Copied HidServAuth",
     "gui_copied_hidservauth": "The HidServAuth line has been copied to clipboard",
     "gui_starting_server1": "Starting Tor onion service...",
-    "gui_starting_server2": "Crunching files...",
+    "gui_starting_server2": "Compressing files...",
     "gui_please_wait": "Starting... Click to cancel",
     "error_hs_dir_cannot_create": "Cannot create onion service dir {0:s}",
     "error_hs_dir_not_writable": "onion service dir {0:s} is not writable",
@@ -65,7 +65,7 @@
     "gui_quit_warning_quit": "Quit",
     "gui_quit_warning_dont_quit": "Cancel",
     "error_rate_limit": "An attacker might be trying to guess your address. To prevent this, OnionShare has automatically stopped the server. To share the files you must start it again and share the new address.",
-    "zip_progress_bar_format": "Crunching files: %p%",
+    "zip_progress_bar_format": "Compressing files: %p%",
     "error_stealth_not_supported": "To create stealth onion services, you need at least Tor 0.2.9.1-alpha (or Tor Browser 6.5) and at least python3-stem 1.5.0.",
     "error_ephemeral_not_supported": "OnionShare requires at least Tor 0.2.7.1 and at least python3-stem 1.4.0.",
     "gui_settings_window_title": "Settings",
